--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-volcan-tahona">Volcan Blanco Tahona (2024)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dj-blanco">Don Julio Blanco</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dagustin-blanco">Don Agustin Blanco</a></li>
-                        <li><a href="#" class="bottle-link sidebar-link" data-target="card-ocho-blanco">Ocho Blanco 2022 "La Ladera"</a></li>
+                        <li><a href="#" class="bottle-link sidebar-link" data-target="card-ocho-blanco">Ocho Blanco"</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-arette-blanco">Arette Blanco (Suave)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-herradura-blanco">Herradura Silver (Blanco)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dramon-blanco">Don Ramon Plata (Blanco)</a></li>
@@ -732,7 +732,7 @@
                  <!-- ====== Ocho Blanco 2022 ====== -->
                 <article class="spirit-card" id="card-ocho-blanco" data-brand="ocho">
                     <div class="spirit-image">
-                        <img src="https://cdn.myshoptet.com/usr/eshop.angelshare.cz/user/shop/big/88455-1_muestra-ocho-no-8-cerro-del-gallo-2022.jpg?66a0cb4c" alt="Lahev Ocho Blanco 2022">
+                        <img src="https://cdn.myshoptet.com/usr/eshop.angelshare.cz/user/shop/big/88455-1_muestra-ocho-no-8-cerro-del-gallo-2022.jpg?66a0cb4c" alt="Lahev Ocho Blanco">
                     </div>
                     <div class="spirit-content">
                         <h2><a href="#" class="brand-link-internal" data-brand-target="ocho">Ocho</a> Blanco 2022 "La Ladera"</h2>
