--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          }
          /* Consistent styling for Show All Bottles */
          #sidebar #show-all-bottles {
-             color: #8ab4f8; /* Default link color */
+             color: #bb86fc; /* Default link color */
          }
          #sidebar #show-all-bottles:hover {
              color: #a8c7fa; /* Consistent hover color */
@@ -542,11 +542,11 @@
                     <div class="spirit-content">
                         <h2><a href="#" class="brand-link-internal" data-brand-target="volcan-de-mi-tierra">Volcan De Mi Tierra</a> Blanco Tahona (2024)</h2>
                         <h3>Příběh & Fakta</h3>
-                        <p>Zdůrazňuje tradiční metodu extrakce kamenem Tahona, známou pro dodání bohatší chuti a textury agáve. Pravděpodobně se zaměřuje na specifické zdroje agáve (potenciálně jeden terroir). Představuje řemeslnější přístup v portfoliu Volcan.</p>
+                        <p>Zdůrazňuje tradiční metodu extrakce kamenem Tahona, známou pro dodání bohatší chuti a textury agáve. Zaměřuje se specifické zdroje agáve (Vysočiny & Nížiny). Představuje řemeslnější přístup v portfoliu Volcan.</p>
                         <h3>Technické Parametry</h3>
                         <ul>
                             <li><strong>Typ:</strong> Tequila (Blanco)</li>
-                            <li><strong>Agáve:</strong> 100% Modrá Weber (Pravděpodobně důraz na specifický terroir)</li>
+                            <li><strong>Agáve:</strong> 100% Modrá Weber (Vysočiny & Nížiny)</li>
                             <li><strong>Region:</strong> Jalisco, Mexiko</li>
                             <li><strong>Vaření:</strong> Pravděpodobně Kamenná/cihlová pec</li>
                             <li><strong>Extrakce:</strong> 100% Tahona</li>
