--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-volcan-tahona">Volcan Blanco Tahona (2024)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dj-blanco">Don Julio Blanco</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dagustin-blanco">Don Agustin Blanco</a></li>
-                        <li><a href="#" class="bottle-link sidebar-link" data-target="card-ocho-blanco">Ocho Blanco"</a></li>
+                        <li><a href="#" class="bottle-link sidebar-link" data-target="card-ocho-blanco">Ocho Blanco</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-arette-blanco">Arette Blanco (Suave)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-herradura-blanco">Herradura Silver (Blanco)</a></li>
                         <li><a href="#" class="bottle-link sidebar-link" data-target="card-dramon-blanco">Don Ramon Plata (Blanco)</a></li>
@@ -747,7 +747,7 @@
                         <img src="https://cdn.myshoptet.com/usr/eshop.angelshare.cz/user/shop/big/88455-1_muestra-ocho-no-8-cerro-del-gallo-2022.jpg?66a0cb4c" alt="Lahev Ocho Blanco">
                     </div>
                     <div class="spirit-content">
-                        <h2><a href="#" class="brand-link-internal" data-brand-target="ocho">Ocho</a> Blanco 2022 "La Ladera"</h2>
+                        <h2><a href="#" class="brand-link-internal" data-brand-target="ocho">Ocho</a> Blanco </h2>
                         <h3>Příběh & Fakta</h3>
                         <p>Vytvořeno Tomasem Estesem a Carlosem Camarenou (mistr lihovarník třetí generace). Ocho bylo průkopníkem konceptu "single estate" nebo "rancho único" tequily, zdůrazňující terroir jako víno. Každá ročníková sklizeň pochází z konkrétního pole, ukazující variace rok od roku a pole od pole. Ročník 2022 pochází z usedlosti "La Ladera".</p>
                         <h3>Technické Parametry</h3>
